Repaso del Codigo y pulir

--- a/views/est_desc.tex
+++ b/views/est_desc.tex
@@ -1,13 +1,13 @@
 
 % Table created by stargazer v.5.2.3 by Marek Hlavac, Social Policy Institute. E-mail: marek.hlavac at gmail.com
-% Date and time: mi., feb. 08, 2023 - 16:14:17
+% Date and time: ju., feb. 09, 2023 - 19:57:27
 \begin{table}[!htbp] \centering 
   \caption{Estadisticas Descriptivas} 
   \label{} 
 \begin{tabular}{@{\extracolsep{5pt}}lccccc} 
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
-Statistic & Edad & Sexo & Educación & 1 si es formal; 0 si no & Horas de trabajo \\ 
+Statistic & Edad & Sexo & 1 si es formal; 0 si no & Horas de trabajo & Ingreso Laboral Mensual \\ 
 \hline \\[-1.8ex] 
 N & 9,892 & 9,892 & 9,892 & 9,892 & 9,892 \\ 
 Mean & 36.2 & 0.5 & 0.8 & 48.0 & 1,745,416.0 \\ 
