--- a/views/reg1.tex
+++ b/views/reg1.tex
@@ -1,6 +1,6 @@
 
 % Table created by stargazer v.5.2.3 by Marek Hlavac, Social Policy Institute. E-mail: marek.hlavac at gmail.com
-% Date and time: mi., feb. 08, 2023 - 16:28:13
+% Date and time: vi., feb. 10, 2023 - 11:34:09
 \begin{table}[!htbp] \centering 
   \caption{Perfil Edad-Salario} 
   \label{} 
