--- a/views/reg_2_3.tex
+++ b/views/reg_2_3.tex
@@ -1,23 +1,24 @@
 
 % Table created by stargazer v.5.2.3 by Marek Hlavac, Social Policy Institute. E-mail: marek.hlavac at gmail.com
-% Date and time: do., feb. 12, 2023 - 17:48:12
+% Date and time: do., feb. 12, 2023 - 18:01:45
 \begin{table}[!htbp] \centering 
   \caption{} 
   \label{} 
 \begin{tabular}{@{\extracolsep{5pt}}lcc} 
 \\[-1.8ex]\hline 
 \hline \\[-1.8ex] 
- & \multicolumn{2}{c}{Modelos FWL} \\ 
+ & \multicolumn{2}{c}{Variable Respuesta} \\ 
 \cline{2-3} 
 \\[-1.8ex] & \multicolumn{2}{c}{Log(Salario)} \\ 
 \\[-1.8ex] & (1) & (2)\\ 
 \hline \\[-1.8ex] 
- Sexo & 0.20541$^{***}$ & 0.20541$^{***}$ \\ 
-  & (0.01205) & (0.01205) \\ 
+ Sexo & 0.14666$^{***}$ & 0.20541$^{***}$ \\ 
+  & (0.01533) & (0.01205) \\ 
   & & \\ 
 \hline \\[-1.8ex] 
 Observations & 9,891 & 9,891 \\ 
-R$^{2}$ & 0.02856 & 0.02856 \\ 
+R$^{2}$ & 0.00917 & 0.43893 \\ 
+F Statistic & 91.52738$^{***}$ (df = 1; 9889) & 1,288.70300$^{***}$ (df = 6; 9884) \\ 
 \hline 
 \hline \\[-1.8ex] 
 \textit{Note:}  & \multicolumn{2}{r}{$^{*}$p$<$0.1; $^{**}$p$<$0.05; $^{***}$p$<$0.01} \\ 
